Stop `ExLink` from wrapping, Add long text `ExLink` story to storybook, Add flex to footer, Change `#root` in storybook to 100% width, Add `Footer` story to storybook

--- a/src/10_styles/01_atom-styles/_a-ex-link.scss
+++ b/src/10_styles/01_atom-styles/_a-ex-link.scss
@@ -1,11 +1,13 @@
 .a-ex-link {
+    display: inline-block;
     color: $link-color;
+    white-space: nowrap; // Stops link text from wrapping with / without SVG - @todo: Possibly change so it can wrap but with SVG
 
     svg {
         width: 14px;
         height: 14px;
         fill: $link-color;
-        margin-left: $gutter--xxxs;
+        margin: auto 0 auto $gutter--xxxs;
     }
 
     &.--smaller {
@@ -15,10 +17,6 @@
             width: 12px;
             height: 12px;
             margin-left: $gutter--xxxxs;
-        }
-
-        &:hover {
-            border-width: 2px;
         }
     }
 }
